[gd_scene load_steps=7 format=3 uid="uid://ds1dcdlcj1lya"]

[ext_resource type="Theme" uid="uid://cxjwnkpltc1jx" path="res://textTheme.tres" id="1_4qfck"]
[ext_resource type="Script" uid="uid://cgph8uqjba4m" path="res://screens/game_over.gd" id="1_s28jw"]
[ext_resource type="AudioStream" uid="uid://cpdmshr5kyvqc" path="res://audio/AmbienceLooped.ogg" id="2_skulm"]
[ext_resource type="AudioStream" uid="uid://cycr8l2gorlke" path="res://audio/pianoHits/LifeLost.ogg" id="4_4qfck"]

[sub_resource type="LabelSettings" id="LabelSettings_11mxd"]
font_size = 32
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_skulm"]
line_spacing = 0.0
font_size = 10

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4qfck")
script = ExtResource("1_s28jw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "GAME OVER"
label_settings = SubResource("LabelSettings_11mxd")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Your mind blanks, full of pain...
...but hungry for answers."
label_settings = SubResource("LabelSettings_skulm")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu
"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit
"

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_skulm")
volume_db = -7.05
pitch_scale = 2.21
autoplay = true
parameters/looping = true

[node name="Jumpscare" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4qfck")
volume_db = 6.057
autoplay = true
